--- a/src/app/features/payment/payment.component.html
+++ b/src/app/features/payment/payment.component.html
@@ -1,1 +1,61 @@
-<p>payment works!</p>
+<div class="payment-container">
+    <div class="container">
+      <div class="row col-md-12">
+        <div class="column">
+          <app-payment-plan [plan]="paymentPlan" class="col-md-6 col-12" [errors]="paymentErrors"></app-payment-plan>
+          <app-prepayment-plan [plan]="prepaymentPlan" class="col-md-6 col-12" [errors]="prepaymentErrors"></app-prepayment-plan>
+        </div>
+      </div>
+      <div class="row col-md-12">
+        <div class="column">
+          <button type="button" class="btn btn-primary m-15" (click)="calculate()">Calculate...</button>
+        </div>
+      </div>
+  
+      <div class="row col-md-12">
+        <div class="column">
+          <table class="table table-striped table-bordered col-md-12 m-15">
+            <thead>
+              <tr>
+                <th scope="col" class="col-6">Category</th>
+                <th scope="col" class="col-2">Term</th>
+                <th scope="col" class="col-4">Amortization Period</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Number of Payments</th>
+                <td name="term-number-of-payments">{{term.numberOfPayments}}</td>
+                <td name="amortization-period-number-of-payments">{{amortizationPeriod.numberOfPayments}}</td>
+              </tr>
+              <tr>
+                <th scope="row">Mortgage Payment</th>
+                <td name="term-mortgage-payment">{{term.mortgagePayment}}</td>
+                <td name="amortization-period-mortgage-payment">{{amortizationPeriod.mortgagePayment}}</td>
+              </tr>
+              <tr>
+                <th scope="row">Prepayment</th>
+                <td name="term-prepayment">{{term.prepayment}}</td>
+                <td name="amortization-period-prepayment">{{amortizationPeriod.prepayment}}</td>
+              </tr>
+              <tr>
+                <th scope="row">Principal Payments</th>
+                <td name="term-principal-payments">{{term.principalPayments}}</td>
+                <td name="amortization-period-principal-payments">{{amortizationPeriod.principalPayments}}</td>
+              </tr>
+              <tr>
+                <th scope="row">Interest Payments</th>
+                <td name="term-interest-payments">{{term.interestPayments}}</td>
+                <td name="amortization-period-interest-payments">{{amortizationPeriod.interestPayments}}</td>
+              </tr>
+              <tr>
+                <th scope="row">Total Cost</th>
+                <td name="term-total-cost">{{term.totalCost}}</td>
+                <td name="amortization-period-total-cost">{{amortizationPeriod.totalCost}}</td>
+              </tr>
+            </tbody>
+          </table>
+         </div>
+        </div>
+    </div>
+  </div>
